--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,24 +9,46 @@
 
     <LinearLayout
         android:id="@+id/linearLayout20"
-        android:layout_width="90dp"
-        android:layout_height="36dp"
+        android:layout_width="317dp"
+        android:layout_height="59dp"
         android:background="#FFFFFF"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.87">
+        app:layout_constraintVertical_bias="0.894">
+
+        <TextView
+            android:id="@+id/total_m_iva"
+            android:layout_width="169dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#000000" />
+
+        <TextView
+            android:id="@+id/iva"
+            android:layout_width="169dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/total"
-            android:layout_width="89dp"
-            android:layout_height="match_parent"
+            android:layout_width="95dp"
+            android:layout_height="30dp"
             android:layout_gravity="right"
-            android:gravity="right"
+            android:gravity="center"
+            android:text="0"
             android:textColor="#000000" />
+
     </LinearLayout>
 
     <LinearLayout
